--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.525.0",
